# payments-toy-engine

./: .gitignore  Cargo.toml  README.md
sample/: accounts.csv  transaction_chargeback.csv  transactions_with_duplicates.csv
src/: cli.rs  csv.rs  main.rs  payments.rs
src/domain/: mod.rs  props.rs
src/domain/account/: aggregate.rs  command.rs  error.rs  event.rs
src/domain/transaction/: aggregate.rs  command.rs  error.rs  event.rs
src/query/: account.rs
tests/: cli.rs
